# modelrelay-py

./: LICENSE  PROGRESS.md  README.md  pyproject.toml
modelrelay-py/: .gitignore  README.md  THIRD-PARTY-NOTICES.md
modelrelay-py/src/modelrelay/: __init__.py
modelrelay-py/tests/: test_modelrelay.py
src/modelrelay/: __init__.py  ai_scoring.py  cli.py  config.py  router.py  scores.py  server.py  sources.py
